# grss

./: .gitignore  .pre-commit  .rustc_info.json  Cargo.toml  LICENSE-MIT  README.md  README.tpl  changelog.md  crates.js  lcov.info  publish_crate.sh  settings.html
.github/workflows/: docs.yaml  main.yml  rust.yml
docs/: .rustc_info.json  crates.js  help.html  index.html  search-index.js  settings.html  sidebar-items.js  src-files.js
docs/clap/: all.html  enum.ArgAction.html  enum.ColorChoice.html  enum.ValueHint.html  index.html  macro.arg.html  macro.command.html  macro.value_parser.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Command.html  struct.Id.html  trait.Args.html  trait.CommandFactory.html  trait.FromArgMatches.html  trait.Parser.html  trait.Subcommand.html  trait.ValueEnum.html  type.Error.html
docs/clap/builder/: enum.ArgAction.html  enum.ArgPredicate.html  enum.Resettable.html  enum.ValueHint.html  index.html  struct.Arg.html  struct.ArgGroup.html  struct.BoolValueParser.html  struct.BoolishValueParser.html  struct.Command.html  struct.EnumValueParser.html  struct.FalseyValueParser.html  struct.MapValueParser.html  (+19 more)
docs/clap_builder/: all.html  enum.ColorChoice.html  index.html  macro.arg.html  macro.command.html  macro.value_parser.html  struct.Id.html  trait.Args.html  trait.CommandFactory.html  trait.FromArgMatches.html  trait.Parser.html  trait.Subcommand.html  trait.ValueEnum.html  type.Error.html
docs/clap_derive/: all.html  derive.Args.html  derive.Parser.html  derive.Subcommand.html  derive.ValueEnum.html  index.html
docs/grep_clone/: all.html  fn.find_matches.html  index.html
docs/grrs_clone/: all.html  fn.find_matches.html  index.html
docs/grss_clone/: all.html  fn.find_matches.html  index.html
docs/syn/: enum.CapturedParam.html  enum.Expr.html  enum.FnArg.html  enum.ForeignItem.html  enum.ImplItem.html  enum.ImplRestriction.html  enum.Item.html  enum.Pat.html  enum.PointerMutability.html  enum.RangeLimits.html  enum.StaticMutability.html  enum.Stmt.html  enum.TraitItem.html  enum.TypeParamBound.html  enum.UseTree.html  struct.AngleBracketedGenericArguments.html  struct.Arm.html  struct.Block.html  struct.DeriveInput.html  struct.ExprArray.html  struct.ExprAssign.html  struct.ExprAsync.html  struct.ExprAwait.html  struct.ExprBinary.html  struct.ExprBlock.html  struct.ExprBreak.html  struct.ExprCall.html  struct.ExprCast.html  struct.ExprClosure.html  struct.ExprConst.html  struct.ExprContinue.html  struct.ExprField.html  struct.ExprForLoop.html  struct.ExprIf.html  struct.ExprIndex.html  struct.ExprInfer.html  struct.ExprLet.html  struct.ExprLit.html  struct.ExprLoop.html  struct.ExprMacro.html  (+74 more)
grss_clone/: all.html
src/: lib.rs  main.rs
tests/: cli.rs  cli_help.rs  cli_unit.rs  cli_version.rs  integrations.rs
(+632 files in other folders)
