[package]
name = "grss_clone"
version = "0.4.4"
authors = ["Reinhard Simon <rsimon64@web.de>"]
edition = "2021"
license = "MIT"
description = "A command-line search tool similar to grep"
readme = "README.md"
repository = "https://github.com/rsimon64-gh/grss"
homepage = "https://rsimon64-gh.github.io/grss/"
keywords = ["cli", "search", "grep", "find", "pattern"]
categories = ["command-line-utilities"]
documentation = "https://github.com/rsimon64-gh/grss#readme"
exclude = ["/.github", "*.log"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
regex = "1"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.2"
pkg-config = "0.3.31"
cargo-llvm-cov = "0.6.16"
cargo-readme = "3.3.1"

[badges]
github = { repository = "webern/cargo-readme" }
crates-io = { repository = "https://crates.io/crates/grss_clone" }
maintenance = { status = "actively-developed" }
docs = { badge = "https://docs.rs/grss_clone/badge.svg" }
build = { badge = "https://github.com/rsimon64-gh/grss/actions/workflows/ci.yml/badge.svg" }
coverage = { badge = "https://coveralls.io/repos/github/rsimon64-gh/grss/badge.svg" }
demo = { badge = "https://img.shields.io/badge/demo-online-brightgreen", repository = "https://your-demo-link.com" }
license = { badge = "MIT" }
